--- a/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
+++ b/src/Project/Wealth/platform/Views/Project/Wealth/Partial/Popup.cshtml
@@ -111,7 +111,7 @@
             <h2 class="c-modal__title">外匯匯率</h2>
         </header>
         <div class="c-modal__content">
-            <iframe src="@CurrencyWebSite">
+            <iframe src="@CurrencyWebSite" style="width:100%; height:660px;">
             </iframe>
         </div>
     </div>
